# PyAutoFit

./: .gitattributes  .gitignore  .url_check_allowlist.txt  AGENTS.md  CITATIONS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  eden.yaml  llms.txt  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docs.yml  main.yml  notify-workspaces.yml  nss_install_smoke.yml
autofit/: __init__.py  conf.py  exc.py  visualise.py
autofit/aggregator/: aggregator.py  file_output.py  search_output.py
autofit/aggregator/summary/: aggregate_fits.py  aggregate_images.py
autofit/config/: README.md  general.yaml
autofit/config/non_linear/: mle.yaml  nest.yaml
autofit/config/priors/: README.md
autofit/config/visualize/: plots_search.yaml
autofit/database/: __init__.py
autofit/database/aggregator/: aggregator.py
autofit/database/model/: array.py  fit.py  model.py
autofit/example/: analysis.py  visualize.py
autofit/graphical/: README.md  __init__.py  mean_field.py
autofit/graphical/declarative/: collection.py  graph.py
autofit/graphical/expectation_propagation/: __init__.py  diagnostics.py  (+3 more)
autofit/interpolator/: abstract.py
autofit/jax/: __init__.py  pytrees.py
autofit/mapper/: identifier.py  model.py  model_mapper.py  model_object.py  operator.py  variable.py  variable_operator.py
autofit/mcp/: __init__.py  __main__.py  bootstrap.py  server.py  tools.py
autofit/messages/: abstract.py  beta.py  composed_transform.py  fixed.py  gamma.py  interface.py  normal.py  truncated_normal.py
autofit/non_linear/: fitness.py  initializer.py  live_viewer.py  quick_update.py  result.py  settings.py  test_mode.py
autofit/plot/: __init__.py
autofit/text/: formatter.py  text_util.py
autofit/tools/: util.py
docs/: conf.py  index.md  index.rst  requirements.txt
docs/api/: analysis.rst  database.rst  model.rst  plot.rst  priors.rst  samples.rst  searches.rst
docs/cookbooks/: analysis.md  configs.md  model.md  multi_level_model.md  multiple_datasets.md  multiple_datasets.rst  result.md  samples.md  search.md  search.rst
docs/features/: graphical.md  graphical.rst  interpolate.md  interpolate.rst  search_chaining.md  search_grid_search.md  sensitivity_mapping.md
docs/general/: citations.md  configs.md  credits.md  roadmap.md  software.md  workspace.md  workspace.rst
docs/howtofit/: chapter_1_introduction.rst  chapter_3_graphical_models.rst  howtofit.rst
docs/installation/: conda.md  conda.rst  overview.md  overview.rst  pip.md  pip.rst  source.md  troubleshooting.md
docs/overview/: backup.md  scientific_workflow.md  statistical_methods.md  statistical_methods.rst  the_basics.md
docs/science_examples/: astronomy.md  astronomy.rst
files/: citation.tex  citations.bib  citations.md
paper/: README.md  paper.bib  paper.md
test_autofit/: conftest.py
test_autofit/aggregator/: conftest.py  test_aggregator.py  test_from_directory.py  test_reference.py
test_autofit/analysis/: test_latent.py  test_latent_variables.py  test_use_jax_for_visualization.py  test_visualizer_combined_kwargs.py
test_autofit/config/: general.yaml  visualize.yaml
test_autofit/database/: test_file_types.py
test_autofit/graphical/: test_combined_analysis.py  test_declarative_deterministic.py  test_ep_analysis_factor.py  test_shared_state.py  test_unification.py  test_visualize_combined_dispatch.py
test_autofit/interpolator/: test_covariance.py  test_interpolator.py
test_autofit/jax/: test_enable_pytrees.py  test_pytrees.py
test_autofit/mapper/: test_array.py  test_constant.py  test_model_mapping_expanded.py  test_parameterization.py
test_autofit/mcp/: test_mcp_tools.py
test_autofit/messages/: test_truncated_normal.py
test_autofit/non_linear/: test_dict.py  test_fitness_assertions.py  test_fitness_jax_dispatch.py  test_initializer.py  test_parallel.py  test_quick_update.py
test_autofit/serialise/: test_regression.py  test_samples.py
test_autofit/text/: test_formatter.py  test_samples_text.py  test_text_util.py
test_autofit/tools/: test_path_util.py  test_paths.py
(+127 files in other folders)
