[build-system]
requires = ["setuptools>=79.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autofit"
dynamic = ["version"]
description = "Classy Probabilistic Programming"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "James Nightingale", email = "James.Nightingale@newcastle.ac.uk" },
    { name = "Richard Hayes", email = "richard@rghsoftware.co.uk" },
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
keywords = ["cli"]
dependencies = [
    "autoconf",
    "array_api_compat",
    "anesthetic==2.8.14; python_version < '3.13'",
    "anesthetic>=2.9.0; python_version >= '3.13'",
    "corner==2.2.2",
    "decorator>=4.2.1",
    "dill>=0.3.1.1",
    "dynesty==2.1.5",
    "typing-inspect>=0.4.0",
    "emcee>=3.1.6",
    "gprof2dot==2021.2.21",
    "matplotlib",
    "numpydoc>=1.0.0",

    "h5py>=3.11.0",
    "SQLAlchemy>=2.0.32,<2.1.0",
    "scipy<=1.17.1",
    "astunparse==1.6.3",
    "threadpoolctl>=3.1.0",
    "timeout-decorator==0.5.0",
    "xxhash<=3.4.1",
    "networkx==3.1",
    "pyvis==0.3.2",
    "psutil==6.1.0"
]

[project.urls]
Homepage = "https://github.com/PyAutoLabs/PyAutoFit"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["docs", "test_autofit", "test_autofit*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"


[project.optional-dependencies]
jax = ["autoconf[jax]"]
optional = [
    "autofit[jax]",
    "astropy>=5.0",
    "blackjax>=1.2.0",
    "getdist==1.4",
    "nautilus-sampler==1.0.5",
    "zeus-mcmc==2.5.4",
]
# Phase 4 of nss_first_class_sampler — support package for `af.NSS`.
#
# The `handley-lab/blackjax` fork (BSD-3-Clause) carries the
# `blackjax.ns.adaptive.init` entrypoint that mainline blackjax lacks, and
# `yallup/nss` (BSD-3-Clause) sits on top. Both are pinned to specific SHAs
# below — but installed manually rather than declared here, because PyPI and
# TestPyPI reject direct `git+https://` URLs in uploaded wheels with:
#
#   400 Can't have direct dependency: blackjax @ git+...
#
# After `pip install autofit[nss]`, complete the install with:
#
#   pip install \
#     "blackjax @ git+https://github.com/handley-lab/blackjax.git@ef45acd2f2fa0cca15adbdcd3ff7cb3a98987cb5" \
#     "nss @ git+https://github.com/yallup/nss.git@69159b0f4a3a53123b9eec7df91e4ed3885e4dc4"
#
# blackjax SHA `ef45acd2` is the May 2026 "Merge PR #60 — double_compile"
# revision, locally validated against the Phase 1-3 work. blackjax HEAD
# (5dbf89a9 at pin time) introduced `numpy>=1.25`, which conflicts with
# autofit's `anesthetic==2.8.14` (numpy<2.0) — bump only after both pins
# move together. See PyAutoPrompt/issued/nss_install_simplification.md
# notes #3-4 for context.
#
# `fastprogress<1.1` stays here as a regular PyPI dep — it keeps fastprogress
# from pulling `python-fasthtml` (1.1.5 transitively requires it).
nss = [
    "fastprogress<1.1",
]
docs=[
    "sphinx",
    "furo",
    "myst-parser",
    "sphinx_copybutton",
    "sphinx_design",
    "sphinx_inline_tabs",
    "sphinx_autodoc_typehints"
]

test = ["pytest"]
dev = ["pytest", "black"]

[tool.setuptools.package-data]
"autofit.config" = ["*"]

[tool.pytest.ini_options]
testpaths = ["test_autofit"]
filterwarnings = [
    "ignore:cuda_plugin_extension:UserWarning",
    "ignore::DeprecationWarning:jax",
    "ignore:relationship .* will copy column:sqlalchemy.exc.SAWarning",
]